# ANDRA_2025_2026

./: .gitignore  DEMARRAGE_ROBOT.md  README.md  TODO.md  config.rviz
beamer/: main.tex
docs/: DEBUG.md  DEMARRAGE_ROBOT.md  DESCRIPTION.md  SCRIPTS.md  STRUCTURE.md  VISUALISATION.md
rapport/: bibliography.bib  main.tex
ros-docker/: Dockerfile  README.md  launch  launch-macos.sh  launch-windows.sh  launch.sh
ros2_ws/: README  setup_workspace.sh
ros2_ws/src/image_transfer/: package.xml  setup.py
ros2_ws/src/image_transfer/image_transfer/: README.md  TODO  fissure_scanner.py  image_publisher.py  image_subscriber.old.py  image_subscriber.py  image_subscriber.py.old.old  odom_to_path.py  position_publisher.py  ptz_controller.py  report_fissures.py  show_pos.py  test.py
ros2_ws/src/image_transfer/src/: image_publisher.py  image_subscriber.py
ros2_ws/src/log/: latest_build
ros_launcher/: README.md  config.rviz  good_tf  launch_ros_nodes.py  map_saver.py  navigation_stack.launch.py  navigation_stack.launch.py.old  report_fissure.py  test_system.sh  ydlidar_config.yaml
ros_launcher/configs/: amcl_config.yaml  ekf_config.yaml  slam_config.yaml
ros_launcher/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_launcher/log/: latest_build
ros_launcher/map_results/: andra.pgm  andra.yaml  map_1742828221.yaml  test_techlab.yaml  wall_techlab.yaml
script_video/: script.sh
scripts/: build.sh  launch.sh  ptz-network-setup.sh  setup.sh
test_adrien/: test_capture.py  test_capture.py.save
video/: script.sh
video_launcher/: script.sh
(+45 files in other folders)
